--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,61 +1,88 @@
-/* NAVBAR STYLING STARTS */
-
 .navbar {
-display: flex;
-align-items: center;
-justify-content: center;
-padding: 10px;
-background-color:#de0606c0;
-color:white;}
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-top: 5px solid white;
+  border-bottom: 5px solid white;
+  background-color: #101B21;
+  color: #E2E4F1;
+}
+.navUl{
+  margin-right: 395px;
+}
 
 .navUl li {
-list-style:none;
-display: inline-block;
-color: white;
-text-align: center;
-padding: 6px;
-  }
-.nav-links{
-color: #fff;
-text-decoration: none;
-display: flex;
-gap: 0.5em;
-font-size: 18px;
-  }
+  list-style: none;
+  display: inline-block;
+  color: #E2E4F1;
+  text-align: center;
+  padding: 6px;
   
-  /* LOGO */
+}
+
+.nav-links {
+  color: #E2E4F1;
+  text-decoration: none;
+  display: flex;
+  gap: 0.5em;
+  font-size: 18px;
   
+}
+
+/* LOGO */
+
 .logo {
-height : 3%;
-width : 3%;
-background-size: contain;
-justify-content: flex-end;
-  }
-  /* NAVBAR MENU */
+  height: 5%;
+  width: 5%;
+  background-size: contain;
+  justify-content: flex-end;
+}
 
 .navUl li:hover {
- display: inline-block;
- position: relative;
- color: #0087ca;
-
-  }
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+}
 
 .navUl li:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #E2E4F1;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
 
- content: '';
- position: absolute;
- width: 100%;
- transform: scaleX(0);
- height: 2px;
- bottom: 0;
- left: 0;
- background-color: #020c11;
- transform-origin: bottom right;
- transition: transform 0.25s ease-out;
-  }
-  
 .navUl li:hover::after {
-transform: scaleX(1);
-transform-origin: bottom left;
-  }
-  
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.navUl .menu button {
+  color: #E2E4F1;
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  gap: 0.5em;
+  font-size: 17px;
+  padding: 0;
+}
+
+.navbar p {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  text-align: left;
+  margin-left: 150px;
+  margin-right: auto;
+  font-size: 50px;
+  color: #E2E4F1;
+}
